---------------------------------------------------------------------------------------------------
Version: 4.1.12
Date: 2021.06.XX
  Features:
    - Added setEmmisions() to set emmision_per_minute for entities
---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2021.06.04
  Changes:
    - Recipe standardisation now nils empty main_product strings to avoid errors in recipe gen.
---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.03.11
  Bugfixes:
    - Fixed a concat typo in omni.lib.add_science_pack() causing a crash in rare cases
---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.03.08
  Info:
    - Moved Angels component mode "omniblocks" from lib to matter
  Bugfixes:
    - Fixed TechGen:setIcons() ignoring tech.icon_size when tech.icons is set
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.02.25
  Features:
    - Added omni.lib.recipe_result_contains_string(recipename, string)
---------------------------------------------------------------------------------------------------
Version: 4.1.7
Date: 2021.02.11
  Bugfixes:
    - Fixed source_inventory_size, result_inventory_size, ingredient_count and result_count
    - -defaultring to 3 on BuildGen:import() when not set
    - Fixed a crash that could happen with recipes that had an empty main_product string set
---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 2021.01.21
  Info:
    - Moved omni.locale and omni.icon to omni.lib.locale and omni.lib.icon
    - Renamed omni.marathon.standardise() to omni.lib.standardise()
  Features:
    - Add BuildGen:setFuelCategories(), replaces setFuelCategory for entities
  Changes: