@@ -3,6 +3,9 @@ Version: 4.1.12
 Date: 2021.06.XX
   Features:
     - Added setEmmisions() to set emmision_per_minute for entities
+  Bugfixes:
+    - Fixed omni.lib.replace_recipe_result() crashing with amount_min and amount_max recipes
+    - Fixed omni.lib.multiply_recipe_result() crashing with amount_min and amount_max recipes
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.11
 Date: 2021.06.04
